feat: add configurable armor resistances display mode
- Add 'armor_resists_show_classes' flag to config (default: false)
- Create armor_resists_filter_armor_types_only() to show only armor types
- Modify ui_armor_resists_create_dialog() to respect config setting
- Add Settings > Armory > Armor Resistances toggle for classes display
- Add translations for settings in EN/FR/DE
- Default view: compact (5 armor types), detailed view available on demand
- Fixes #v0.109

--- a/Language/de.json
+++ b/Language/de.json
@@ -1435,6 +1435,10 @@
             "albion": "Albion",
             "midgard": "Midgard",
             "hibernia": "Hibernia"
+        },
+        "settings": {
+            "show_classes": "Klassen anzeigen (Detaillierte Ansicht)",
+            "show_classes_tooltip": "Wenn aktiviert, werden Widerstände für jede Klasse angezeigt.\nWenn deaktiviert, werden nur Widerstände nach Rüstungstyp angezeigt."
         }
     },
     "common": {
