--- a/Language/fr.json
+++ b/Language/fr.json
@@ -1446,6 +1446,10 @@
             "albion": "Albion",
             "midgard": "Midgard",
             "hibernia": "Hibernia"
+        },
+        "settings": {
+            "show_classes": "Afficher les classes (vue détaillée)",
+            "show_classes_tooltip": "Si activé, affiche les résistances pour chaque classe.\nSi désactivé, affiche seulement les résistances par type d'armure."
         }
     },
     "common": {
@@ -1455,22 +1459,4 @@
         "data_load_failed": "Erreur lors du chargement des données"
     }
 }
-},
-    "armor_resists": {
-        "dialog": {
-            "title": " Résistances d'Armure"
-        },
-        "realm_label": "Sélectionnez un Royaume :",
-        "realm": {
-            "albion": "Albion",
-            "midgard": "Midgard",
-            "hibernia": "Hibernia"
-        }
-    },
-    "common": {
-        "close_button": "Fermer"
-    },
-    "error": {
-        "data_load_failed": "Erreur lors du chargement des données"
-    }
 }
