fix: use lang.get() for armor resistances settings label and tooltip
- Replace hardcoded French text with dynamic lang.get() calls
- Add 'armor_resists.settings.title' translation key
- Use proper localization for checkbox label and tooltip
- Settings now properly respects language configuration
- Visible in all supported languages (EN/FR/DE)

--- a/Language/de.json
+++ b/Language/de.json
@@ -1437,6 +1437,7 @@
             "hibernia": "Hibernia"
         },
         "settings": {
+            "title": "🛡️ Rüstungswiderstandstabelle:",
             "show_classes": "Klassen anzeigen (Detaillierte Ansicht)",
             "show_classes_tooltip": "Wenn aktiviert, werden Widerstände für jede Klasse angezeigt.\nWenn deaktiviert, werden nur Widerstände nach Rüstungstyp angezeigt."
         }
