docs: update armor resistances documentation to version 0.2
- Update version from 0.109 to 0.2
- Document Settings integration (UI/settings_dialog.py)
- Add configuration details (armory.armor_resists_show_classes)
- Update display format (numeric percentages instead of symbols)
- Add details about compact vs detailed view modes
- Include tab-based realm selection instead of dropdown
- Add info about configuration persistence
- Update version history with complete feature list
- Update status to Production Ready (v0.2)

--- a/Language/fr.json
+++ b/Language/fr.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "window": {
         "main_title": "DAOC - Gestion des personnages",
         "welcome_message": "Bienvenue dans le gestionnaire de personnages !",
@@ -753,12 +753,43 @@
         "select_season": "Veuillez sélectionner une saison",
         "enter_description": "Veuillez saisir une description",
         "tags_suggested": {
-            "budget": ["low-cost", "budget", "premium", "high-end"],
-            "content": ["pve", "pvp", "rvr", "solo", "groupe"],
-            "level": ["débutant", "intermédiaire", "avancé"],
-            "ml": ["ml1", "ml5", "ml10", "sans-ml"],
-            "source": ["eden", "officiel", "communauté", "personnel"],
-            "spec": ["heal", "dps", "tank", "support", "cc"]
+            "budget": [
+                "low-cost",
+                "budget",
+                "premium",
+                "high-end"
+            ],
+            "content": [
+                "pve",
+                "pvp",
+                "rvr",
+                "solo",
+                "groupe"
+            ],
+            "level": [
+                "débutant",
+                "intermédiaire",
+                "avancé"
+            ],
+            "ml": [
+                "ml1",
+                "ml5",
+                "ml10",
+                "sans-ml"
+            ],
+            "source": [
+                "eden",
+                "officiel",
+                "communauté",
+                "personnel"
+            ],
+            "spec": [
+                "heal",
+                "dps",
+                "tank",
+                "support",
+                "cc"
+            ]
         }
     },
     "template_list": {
@@ -1459,5 +1490,4 @@
     "error": {
         "data_load_failed": "Erreur lors du chargement des données"
     }
-}
 }
