feat: implement sound control feature v0.109
- Add SoundManager class for sound settings management (Functions/sound_manager.py)
- Create SilentMessageBox wrapper with custom dialog fallback (UI/ui_sound_manager.py)
- Add Audio Settings UI to Settings Dialog (Settings > General > Audio Settings)
- Replace 181 QMessageBox calls with SilentMessageBox across 15+ files
- Add ui.enable_sounds configuration option (default: true)
- Implement winsound.PlaySound(None, SND_PURGE) for sound suppression on Windows
- Add multi-language support for audio settings (EN/FR/DE)
- Create comprehensive Sound Control technical documentation (v1.0)
- Update Documentations/README.md with Sound Control references

Modified files:
- UI/settings_dialog.py: 70 SilentMessageBox replacements
- UI/dialogs.py: 65 replacements
- main.py: 16 replacements
- UI/database_editor_dialog.py: 44 replacements
- Functions/armor_upload_handler.py: 10 replacements
- UI/ui_armory_template_import_dialog.py: 7 replacements
- Tools/Debug-Log/tools_debug_log_editor.py: 6 replacements
- UI/ui_armory_template_edit_dialog.py: 5 replacements
- UI/mass_import_monitor.py: 4 replacements
- UI/ui_message_helper.py: 4 replacements
- UI/failed_items_review_dialog.py: 3 replacements
- Functions/character_actions_manager.py: 11 replacements
- Functions/character_herald_scrapper.py: 2 replacements
- Functions/item_model_viewer.py: 2 replacements
- Functions/ui_manager.py: 1 replacement

Configuration & Translation:
- config.json: Added ui.enable_sounds (default: true)
- Language/en.json: Added audio settings keys
- Language/fr.json: Added French audio settings translations
- Language/de.json: Added German audio settings translations

Documentation:
- NEW: Documentations/Sound/SOUND_CONTROL_TECHNICAL_DOCUMENTATION.md (v1.0)
- Updated: Documentations/README.md with Sound Control section

Testing: All imports verified and working correctly
Branch: feature/v0.109-sound-control (awaiting user validation before merge)

--- a/Language/de.json
+++ b/Language/de.json
@@ -1443,7 +1443,15 @@
         }
     },
     "common": {
-        "close_button": "Schließen"
+        "close_button": "Schließen",
+        "dialog_ok": "OK",
+        "dialog_yes": "Ja",
+        "dialog_no": "Nein"
+    },
+    "config": {
+        "audio_group_title": "Audioeinstellungen",
+        "enable_sounds_label": "Nachrichtenfeld-Sounds aktivieren",
+        "enable_sounds_tooltip": "Deaktivieren Sie dies, um Systembiepieptöne in Nachrichtenkästchen zu unterdrücken"
     },
     "error": {
         "data_load_failed": "Fehler beim Laden der Daten"
